# beerview

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: api.md  architecture.md  concept.md  data-model.md  open-questions.md  prd.md  reliability.md  technical-guidelines.md  vision.md
migrations/: 20260401000000_create_pubs.sql  20260401000001_create_users.sql  20260401000002_create_beers.sql  20260401000003_create_taps.sql  20260401000004_create_queue.sql  20260401000005_create_tap_history.sql  20260401000006_create_tap_switch_undo.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  webhook.rs
src/admin/: mod.rs  queue.rs  settings.rs  taps.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  session.rs
src/beer/: search.rs
src/embed/: widget.js
src/models/: beer.rs  mod.rs  pub_.rs  queue_item.rs  tap.rs  tap_history.rs  user.rs
src/public/: discovery.rs  mod.rs  pub_detail.rs  tap_list.rs
src/templates/: admin_queue.rs  admin_taps.rs  components.rs  discovery.rs  layout.rs  login.rs  mod.rs  pub_page.rs
static/: htmx.min.js  style.css
tests/: test_auth.rs  test_queue.rs  test_switch.rs  test_taps.rs
tests/common/: mod.rs
